--- a/inicio.css
+++ b/inicio.css
@@ -4,20 +4,15 @@ body{
 }
 
 header{
-    display: inline-block;
-    padding: 5px;
+    padding: 10px;
     width:100%;
     height:100%;
     border-bottom: 2px solid grey;
 }
 
-header img{
-    height:50px;
-    width:50px;
-}
-
 h1{
-    font-size:15px;
+    font-size:20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 main{
@@ -27,15 +22,19 @@ main{
 }
 
 .formulario{
-    width: 50%;
+    width: 45%;
+    margin-left: 50px;
+    margin-top: 80px;
+    margin-right: 0;
     float: left;
-    margin: 15%;
 }
 
 .formulario p{
+    margin-left: 5px;
     color: gray;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 .formulario p a{
     color:white;
 }
@@ -62,14 +61,21 @@ button{
     align-items: center;
 }
 
-.oracion{
-    margin:15%;
-    width: 50%;
-    height: 100%;
+.fotoytexto{
+    width: 45%;
     float:right;
+    margin-top: 30px;
 }
 
-h2{
+div h2{
+    margin: 5%;
+    width: 50%;
+    height: 100%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
+}
+
+.fotoytexto img{
+    width: 350px;
+    height: 350px;
 }
