--- a/login.css
+++ b/login.css
@@ -1,38 +1,68 @@
 body{
     background-color: black;
     color: white ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header{
     padding: 10px;
     width:100%;
     height:100%;
-    border-bottom: 2px solid grey;
+    border-bottom: 1px solid grey;
+    margin-bottom: 0;
 }
 
-h1{
+header h1{
     font-size:20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 main{
+    width:100%;
+    height:100%;
+    margin: 0;
+}
+
+#bienvenida{
+    width: 100%;
+    height: 40%;
+    margin-top: 0;
+}
+
+#bienvenida h2, #bienvenida p{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+#bienvenida h2{
+    font-size: 30px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+#bienvenida p{
+    font-size: 20px;
+    color: gray;
+}
+
+#contenedor{
     width:100%;
     height:100%;
     display: inline-block;
 }
 
 .formulario{
-    width: 45%;
-    margin-left: 50px;
+    width: 25%;
     margin-top: 80px;
-    margin-right: 0;
-    float: left;
+    margin-right: 20%;
+    float: right;
 }
 
 .formulario p{
-    margin-left: 5px;
+    margin-left: 15px;
     color: gray;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .formulario p a{
@@ -45,11 +75,10 @@ input{
 
 input, button{
     font-size: 20px;
-    padding: 10px;
+    padding: 15px 15px;
     display: block;
-    margin: 10px;
+    margin: 15px;
     background-color: white ;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 button{
@@ -61,21 +90,16 @@ button{
     align-items: center;
 }
 
-.fotoytexto{
-    width: 45%;
-    float:right;
-    margin-top: 30px;
+#logo{
+    width: 25%;
+    float: left;
+    margin-top: 40px;
+    margin-left: 25%;
 }
 
-div h2{
-    margin: 5%;
-    width: 50%;
-    height: 100%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-}
 
-.fotoytexto img{
+#logo img{
     width: 350px;
     height: 350px;
+    padding: 5px;
 }
