--- a/metalized.css
+++ b/metalized.css
@@ -1,7 +1,7 @@
 body{
     background-color: black;
     color: white ;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 main{
@@ -13,36 +13,36 @@ main{
 #contenedor1{
     background-color: rgb(70, 70, 70);
     width: 20%;
-    height: 85%;
+    height: 100%;
     float: left;
     padding: 5px;
 }
 
 .seccionUsuario{
-    height: 30%;
+    height: 40%;
     display: inline-block;
-    margin: 10px;
+    margin: 15px;
     margin-bottom: 25px;
 }
 
 .seccionUsuario img{
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     border-radius: 60%;
     float: left;
 }
 
 .seccionUsuario h2{
     float: right;
-    margin-top: 15%;
-    margin-left: 10px;
+    margin-top: 20%;
+    margin-left: 15px;
     font-size: 20px;
     align-content: center;
 }
 
 .menu{
     height: 60%;
-    font-size: 18px;
+    font-size: 25px;
     font-weight: bold;
 }
 
@@ -52,7 +52,7 @@ main{
 
 .menu ul li{
     list-style-type: none;
-    margin-bottom: 25px;
+    margin: 25px 10px;
 }
 
 .milibreria{
@@ -63,25 +63,61 @@ main{
 #contenedor2{
     background-color: rgb(70, 70, 70);
     width: 78%;
-    height: 85%;
+    height: 90%;
     float: right;
-    padding: 3px;
+    padding: 10px;
+    justify-content: space-around;
 }
 
 .barra_horizontal{
+    width: 100%;
+    height: 20%;
     display: inline-block;
     justify-content: space-around;
 }
 
-.barra_horizontal img{
-    width: 70px;
-    height: 70px;
+.barra_horizontal h2{
+    float: left;
+}
+
+.nyl {
+    float:right;
+}
+
+.nyl h3{
+    float: left;
+    margin-top: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+} 
+
+.nyl img{
+    width: 60px;
+    height: 60px;
+    float: right;
+    margin-top: 5px;
+}
+
+.barraBusq{
+    background-color: rgb(124, 124, 124);
+    border: 1px rgb(109, 109, 109) solid;
+    border-radius: 10px;
+    width: 30%;
+    margin-left: 25%;
+    justify-content: center;
+}
+
+.barraBusq h3{
+    font-size: 15px;
+    font-weight: 500;
+    padding-left: 30px;
+    color: rgb(255, 255, 255);
 }
 
 footer{
     display: inline-block;
     width: 100%;
-    height: 15%;
+    height: 10%;
     background-color:#811212;
     color: white;
     position: fixed;
@@ -125,5 +161,8 @@ footer{
 }
 
 #barraReproductora{
+    height: 10%;
+    justify-content: center;
+    align-content: center;
     float: right;
 }
