--- a/metalized.css
+++ b/metalized.css
@@ -70,6 +70,7 @@ main{
 }
 
 #contenedor2{
+    display:block;
     background-color: rgb(70, 70, 70);
     width: 96%;
     height: 90%;
@@ -121,6 +122,31 @@ main{
     font-weight: 500;
     padding-left: 30px;
     color: rgb(255, 255, 255);
+}
+
+#albumes{
+    display: inline-block;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: stretch ;
+}
+
+.contenedorAlbum{
+    display: inline-block;
+    width: 20%;
+    margin: 10px;
+}
+
+.contenedorAlbum img{
+    width: 60px;
+    height: 60px;
+}
+
+.contenedorAlbum p{
+    background-color: rgb(124, 124, 124);
+    color: rgb(0, 0, 0);
+    border-radius: 1%;
+    font-size: 15px;
 }
 
 footer{
