--- a/metalized.css
+++ b/metalized.css
@@ -4,6 +4,53 @@ body{
     font-family: 'Arial Bold', sans-serif;
     display: flex;
 }
+/*
+
+
+.logo-contenedor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    animation: fadeOut 8s forwards; 
+}
+
+.logo {
+    max-width: 30%;
+    animation: fadeIn 3.5s ease-out;
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    90% {
+        opacity: 0;
+        z-index: 10;
+    }
+    100% {
+        opacity: 0;
+        z-index: -1;
+    }
+}
+ 
+*/
 
 header{
     display: flex;
