--- a/metalized.css
+++ b/metalized.css
@@ -11,7 +11,7 @@ header{
     display: flex;
     flex-direction: column;
     height: 85vh;
-    width: 9cm;
+    width: 8cm;
 }
 
 #contenedor1{
@@ -107,8 +107,12 @@ main{
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
     border-top-left-radius: 0px;
-    padding: 10px 15px;
+    padding: 8px 12px;
     height: 100%;
+}
+
+.inicio h3{
+    margin: 7px;
 }
 
 .nyl {
@@ -168,7 +172,7 @@ main{
 .contenedorAlbum{
     display: inline-block;
     background-color: rgb(124, 124, 124);
-    width: 22%;
+    width: 22.5%;
     margin: 10px;
     align-items: center;
 }
@@ -190,6 +194,7 @@ main{
     margin-top: 10%;
 }
 
+/*
 #artistas{
     display: flex;
     flex-direction: row;
@@ -203,10 +208,25 @@ main{
     width: 100%;
     align-items: center;
 }
+*/
+
+#artistas{
+    display: inline-block;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-content: stretch;
+}
+
+.contenedorArtista{
+    display: inline-block;
+    width: 22.5%;
+    margin: 10px;
+    align-items: center;
+}
 
 .contenedorArtista img{
-    width: 200px;
-    height: 200px;
+    width: 220px;
+    height: 220px;
 }
 
 .contenedorArtista p {
@@ -228,7 +248,7 @@ footer{
     left: 0;
     right: 0;
     bottom: 0;
-    padding: 5px; 
+    padding: 7px; 
     align-items: flex-end;
 }
 
@@ -267,11 +287,12 @@ footer{
 
 #barraReproductora-iconos{
     margin-left: 50%;
+    height: 20px;
+    margin-top: 0px;
 }
 
 #barraReproductora-iconos img{
     margin: 20px;
-    width: 30px;
-
+    width: 25px;
 }
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
