--- a/metalized.css
+++ b/metalized.css
@@ -285,14 +285,43 @@ footer{
     margin-bottom: 15px;
 }
 
-#barraReproductora-iconos{
+#barraReproduccion{
+    display: block;
     margin-left: 50%;
+}
+
+#barraReproductora-iconos{
     height: 20px;
     margin-top: 0px;
 }
 
 #barraReproductora-iconos img{
-    margin: 20px;
+    margin: 15px;
     width: 25px;
 }
+/*
+.progress {
+    height: 35px;
+    width: 100%;
+    border: 1px solid #428bca;
+    border-radius: 5px;
+    background-color: #e6f3fa;
+    margin-bottom: 15px;
+}
+
+.progress-bar {
+    height: 100%;
+    background: #428bca;
+    display: flex;
+    align-items: center;
+    transition: width 0.25s;
+    border-radius: 5px;
+}
+
+.progress-bar-text {
+    margin-left: 10px;
+    font-weight: bold;
+    color: #cce7f5;
+}*/
+
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
