--- a/artistas.css
+++ b/artistas.css
@@ -64,6 +64,7 @@ a{
     color:white;
 }
 
+
 #uno{
     justify-self: center;
     align-items: center;
@@ -210,7 +211,7 @@ main{
     color:rgb(168, 167, 167)
 }
 
-#canciones {
+#artistas {
     height: 76vh; 
     overflow-y: auto;
     background-color: rgb(70, 70, 70);
@@ -222,44 +223,36 @@ main{
 #populares, #masEscuchados, #masTiempoSinEscuchar{
     margin: 15px;
 }
-.divCancion{
+.divArtista{
     padding: 5px;
     width:100%;
 }
 
-.contenedorCancion{
+.contenedorArtista{
     background-color: #5e5e5e;
     display: inline-block;
     width: 18%;
     margin: 0px;
     align-items: center;
+    border-radius: 5%;
 }
 
-.contenedorCancion img{
+.contenedorArtista img{
     width: 150px;
     height: 150px;
     align-content: center;
     justify-content: center;
     margin: 5%;
     margin-bottom: 0px;
+    border-radius: 50%;
 }
 
-.titulo {
-    margin: 6px 0px;
-    margin-bottom: 0px;
+.artista {
+    margin: 8px 0px;
     text-align: center;
     justify-content: center;
     font-weight: bolder;
     color: black;
-}
-
-.artista {
-    font-size: 15px;
-    margin: 0px;
-    margin-bottom: 10px;
-    text-align: center;
-    justify-content: center;
-    color: rgb(29, 29, 29);
 }
 /**/
 /* ++++++++++++ MAIN (INICIO) +++++++++++ */
