--- a/metalized.css
+++ b/metalized.css
@@ -53,9 +53,15 @@ header{
 
 .menu ul li{
     list-style-type: none;
+    list-style: none;
     margin: 15px 5px;
     align-items: center;
     height: 23px;
+}
+
+a{
+    text-decoration: none;
+    color:white;
 }
 
 #uno{
@@ -105,7 +111,6 @@ main{
     margin-top: -10px;
 }
 
-/**/
 .barra_horizontal{
     width: 100%;
     height: 15%;
@@ -125,10 +130,22 @@ main{
     padding: 5px;
 }
 
-.solapa h1{
+.solapa h2{
     margin-top: 5px;
     margin-left: 10px;
     font-size: 21px;
+}
+
+.inicio{
+    background-color: rgb(70, 70, 70);
+    border-radius: 10px;
+    border-top-left-radius: 0px;
+    padding: 5px 12px;
+    height: 100%;
+}
+
+.inicio h3{
+    margin: 7px;
 }
 
 .nyl {
@@ -177,97 +194,64 @@ main{
     margin-top: -34px;
     padding-right: 10px;
 }
-/**/
 
-/**/
-.inicio{
-    background-color: rgb(70, 70, 70);
-    border-radius: 10px;
-    border-top-left-radius: 0px;
-    padding: 5px 12px;
-    height: 100%;
-}
-/**/
-
-/**/
-.descripcion{
-    width: 100%;
-    height: 20%;
-    display: inline-block;
-}
-
-.descripcion h2{
-    font-size: 18px;
-    width: 60%;
-    text-align: start;
-    float: left;
-    margin: 0px;
-}
-
-.descripcion h3{
-    font-size: 15px;
-    width: 35%;
-    padding-right: 10px;
-    text-align: end;
-    float: right;
-    margin: 0px;
-    color:rgb(168, 167, 167)
-}
-
-#canciones{
-    width: 100%;
-    height: 100%;
-    padding: 3px;
-    display: block;
+#albumes{
     display: inline-block;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: stretch;
+    justify-content: space-evenly;
+    align-content: stretch ;
 }
 
-#populares, #masEscuchados, #masTiempoSinEscuchar{
-    margin: 15px;
-}
-.divCancion{
-    padding: 5px;
-    width:100%;
-}
-
-.contenedorCancion{
-    background-color: #5e5e5e;
+.contenedorAlbum{
     display: inline-block;
-    width: 18%;
-    margin: 0px;
+    background-color: rgb(124, 124, 124);
+    width: 22.5%;
+    margin: 10px;
     align-items: center;
 }
 
-.contenedorCancion img{
-    width: 150px;
-    height: 150px;
-    align-content: center;
-    justify-content: center;
-    margin: 5%;
-    margin-bottom: 0px;
+.contenedorAlbum img{
+    width: 60px;
+    height: 60px;
+    float: left;
+    margin-right: 3px;
 }
 
-.titulo {
-    margin: 6px 0px;
-    margin-bottom: 0px;
+.contenedorAlbum p{
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    align-content:center;
+    float: left;
+    font-weight: bold;
+    margin-left: 5px;
+    margin-top: 10%;
+}
+
+#artistas{
+    display: inline-block;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-content: stretch;
+}
+
+.contenedorArtista{
+    display: inline-block;
+    width: 22.5%;
+    margin: 10px;
+    align-items: center;
+}
+
+.contenedorArtista img{
+    width: 220px;
+    height: 220px;
+}
+
+.contenedorArtista p {
     text-align: center;
     justify-content: center;
     font-weight: bolder;
     color: black;
 }
-
-.artista {
-    font-size: 15px;
-    margin: 0px;
-    margin-bottom: 10px;
-    text-align: center;
-    justify-content: center;
-    color: rgb(29, 29, 29);
-}
-/**/
 /* ++++++++++++ MAIN (INICIO) +++++++++++ */
 
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
