--- a/canciones.css
+++ b/canciones.css
@@ -237,11 +237,14 @@ main{
 
 .contenedorCancion img{
     width: 150px;
-    height: 150px;
     align-content: center;
     justify-content: center;
     margin: 5%;
-    margin-bottom: 0px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: auto;
 }
 
 .titulo {
