--- a/canciones.css
+++ b/canciones.css
@@ -1,7 +1,8 @@
 body{
     background-color: black;
     color: white ;
-    font-family: "Arimo", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
     font-style: normal;
     display: flex;
 }
@@ -122,7 +123,7 @@ main{
 
 .solapa{
     width: 15%;
-    height: 40px;
+    height: 43px;
     float: left;
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
@@ -211,7 +212,7 @@ main{
 }
 
 #canciones {
-    height: 76vh; 
+    height: 75vh; 
     overflow-y: auto;
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
