--- a/metalized.css
+++ b/metalized.css
@@ -1,9 +1,11 @@
 body{
     background-color: black;
     color: white ;
-    font-family: "Arimo", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: lighter;
     font-style: normal;
     display: flex;
+
 }
 
 /* ------------ HEADER (MENU) --------------- */
@@ -136,15 +138,15 @@ main{
     font-size: 21px;
 }
 
-.inicio{
+#inicio{
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
     border-top-left-radius: 0px;
     padding: 5px 12px;
-    height: 100%;
+    height: 85vh;
 }
 
-.inicio h3{
+#inicio h3{
     margin: 7px;
 }
 
