--- a/metalized.css
+++ b/metalized.css
@@ -142,8 +142,8 @@ main{
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
     border-top-left-radius: 0px;
-    padding: 5px 12px;
-    height: 85vh;
+    padding: 7px 12px;
+    height: 75vh;
 }
 
 #inicio h3{
@@ -319,14 +319,31 @@ footer{
     width: 25px;
 }
 
+#barraReproduccion{
+    width: 40%;
+    display: block;
+    margin-left: 35%;
+}
+
+#barraReproductora-iconos{
+    height: 55%;
+    margin-top: 0px;
+    margin-left: 20%;
+}
+
+#barraReproductora-iconos img{
+    margin: 15px;
+    width: 25px;
+}
+
 #barraProgeso{
+    width: 15%;
     height: 50%;
-    margin-left: 50%;
+    margin-left: 5%;
 }
 
 .progress {
     height: 5px;
-    width: 55%;
     border-radius: 5px;
     background-color: #5f1010;
     margin-bottom: 15px;
@@ -341,5 +358,6 @@ footer{
     transition: width 0.25s;
     border-radius: 5px;
 }
+
 
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
