--- a/albumes.css
+++ b/albumes.css
@@ -1,7 +1,8 @@
 body{
     background-color: black;
     color: white ;
-    font-family: "Arimo", sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: lighter;
     font-style: normal;
     display: flex;
 }
@@ -64,6 +65,7 @@ a{
     color:white;
 }
 
+
 #uno{
     justify-self: center;
     align-items: center;
@@ -122,7 +124,7 @@ main{
 
 .solapa{
     width: 15%;
-    height: 40px;
+    height: 43px;
     float: left;
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
@@ -138,7 +140,6 @@ main{
 }
 
 .nyl {
-    display: inline-block;
     background-color: black;
     float: right;
 }
@@ -187,6 +188,7 @@ main{
 
 /**/
 .descripcion{
+    margin-top: 5px;
     width: 100%;
     height: 20%;
     display: inline-block;
@@ -210,32 +212,67 @@ main{
     color:rgb(168, 167, 167)
 }
 
-#albumes {
-    height: 76vh; 
+#descubre {
+    height: 75vh; 
     overflow-y: auto;
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
     border-top-left-radius: 0px;
-    padding: 5px 12px;
+    padding: 7px 12px;
 }
 
-#populares, #masEscuchados, #masTiempoSinEscuchar{
+#populares{
     margin: 15px;
 }
-.divAlbum{
+
+#albumes{
+    display: inline-block;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: stretch ;
+}
+
+.contenedorAlbum{
+    display: inline-block;
+    background-color: rgb(124, 124, 124);
+    width: 22.5%;
+    margin: 10px;
+    align-items: center;
+}
+
+.contenedorAlbum img{
+    width: 60px;
+    height: 60px;
+    float: left;
+    margin-right: 3px;
+}
+
+.contenedorAlbum p{
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    align-content:center;
+    float: left;
+    font-weight: bold;
+    margin-left: 5px;
+    margin-top: 10%;
+}
+
+.divPlaylists{
     padding: 5px;
     width:100%;
 }
 
-.contenedorAlbum{
+.contenedorPlaylists {
     background-color: #5e5e5e;
     display: inline-block;
     width: 18%;
     margin: 0px;
     align-items: center;
+    border-radius: 5%;
+    text-align: center;
 }
 
-.contenedorAlbum img{
+.contenedorPlaylists img{
     width: 150px;
     align-content: center;
     justify-content: center;
@@ -247,22 +284,12 @@ main{
     height: auto;
 }
 
-.titulo {
-    margin: 6px 0px;
-    margin-bottom: 0px;
+.Playlists {
+    margin: 8px 0px;
     text-align: center;
     justify-content: center;
     font-weight: bolder;
     color: black;
-}
-
-.artista {
-    font-size: 15px;
-    margin: 0px;
-    margin-bottom: 10px;
-    text-align: center;
-    justify-content: center;
-    color: rgb(29, 29, 29);
 }
 /**/
 /* ++++++++++++ MAIN (INICIO) +++++++++++ */
@@ -316,13 +343,15 @@ footer{
 }
 
 #barraReproduccion{
+    width: 40%;
     display: block;
-    margin-left: 50%;
+    margin-left: 35%;
 }
 
 #barraReproductora-iconos{
     height: 55%;
     margin-top: 0px;
+    margin-left: 20%;
 }
 
 #barraReproductora-iconos img{
@@ -331,13 +360,13 @@ footer{
 }
 
 #barraProgeso{
+    width: 15%;
     height: 50%;
-    margin-left: 50%;
+    margin-left: 5%;
 }
 
 .progress {
     height: 5px;
-    width: 55%;
     border-radius: 5px;
     background-color: #5f1010;
     margin-bottom: 15px;
@@ -352,5 +381,7 @@ footer{
     transition: width 0.25s;
     border-radius: 5px;
 }
+
+
 
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
