--- a/albumes.css
+++ b/albumes.css
@@ -65,7 +65,6 @@ a{
     color:white;
 }
 
-
 #uno{
     justify-self: center;
     align-items: center;
@@ -124,7 +123,7 @@ main{
 
 .solapa{
     width: 15%;
-    height: 43px;
+    height: 40px;
     float: left;
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
@@ -140,6 +139,7 @@ main{
 }
 
 .nyl {
+    display: inline-block;
     background-color: black;
     float: right;
 }
@@ -188,7 +188,6 @@ main{
 
 /**/
 .descripcion{
-    margin-top: 5px;
     width: 100%;
     height: 20%;
     display: inline-block;
@@ -212,67 +211,32 @@ main{
     color:rgb(168, 167, 167)
 }
 
-#descubre {
-    height: 75vh; 
+#albumes {
+    height: 76vh; 
     overflow-y: auto;
     background-color: rgb(70, 70, 70);
     border-radius: 10px;
     border-top-left-radius: 0px;
-    padding: 7px 12px;
+    padding: 5px 12px;
 }
 
-#populares{
+#populares, #masEscuchados, #masTiempoSinEscuchar{
     margin: 15px;
 }
-
-#albumes{
-    display: inline-block;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: stretch ;
-}
-
-.contenedorAlbum{
-    display: inline-block;
-    background-color: rgb(124, 124, 124);
-    width: 22.5%;
-    margin: 10px;
-    align-items: center;
-}
-
-.contenedorAlbum img{
-    width: 60px;
-    height: 60px;
-    float: left;
-    margin-right: 3px;
-}
-
-.contenedorAlbum p{
-    color: rgb(0, 0, 0);
-    font-size: 15px;
-    align-content:center;
-    float: left;
-    font-weight: bold;
-    margin-left: 5px;
-    margin-top: 10%;
-}
-
-.divPlaylists{
+.divAlbum{
     padding: 5px;
     width:100%;
 }
 
-.contenedorPlaylists {
+.contenedorAlbum{
     background-color: #5e5e5e;
     display: inline-block;
     width: 18%;
     margin: 0px;
     align-items: center;
-    border-radius: 5%;
-    text-align: center;
 }
 
-.contenedorPlaylists img{
+.contenedorAlbum img{
     width: 150px;
     align-content: center;
     justify-content: center;
@@ -284,12 +248,23 @@ main{
     height: auto;
 }
 
-.Playlists {
-    margin: 8px 0px;
+.titulo {
+    margin: 6px 0px;
+    margin-bottom: 0px;
     text-align: center;
     justify-content: center;
     font-weight: bolder;
     color: black;
+}
+
+.artista {
+    font-size: 15px;
+    margin: 0px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-weight: 400;
+    justify-content: center;
+    color: rgb(29, 29, 29);
 }
 /**/
 /* ++++++++++++ MAIN (INICIO) +++++++++++ */
@@ -341,7 +316,6 @@ footer{
     margin: 3px;
     margin-bottom: 15px;
 }
-
 #barraReproduccion{
     width: 40%;
     display: block;
@@ -381,7 +355,5 @@ footer{
     transition: width 0.25s;
     border-radius: 5px;
 }
-
-
 
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
