--- a/albumes.css
+++ b/albumes.css
@@ -223,9 +223,14 @@ main{
 #populares, #masEscuchados, #masTiempoSinEscuchar{
     margin: 15px;
 }
-.divAlbum{
+
+.carousel{
     padding: 5px;
-    width:100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden; 
 }
 
 .contenedorAlbum{
@@ -234,6 +239,13 @@ main{
     width: 18%;
     margin: 0px;
     align-items: center;
+    min-width: 100%; 
+    box-sizing: border-box; 
+}
+
+.slides {
+    display: flex;
+    transition: transform 0.5s ease;
 }
 
 .contenedorAlbum img{
@@ -247,6 +259,18 @@ main{
     max-width: 100%;
     height: auto;
 }
+
+.prev, .next, .prevME, .prevMTSE, .nextME, .nextMTSE {
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white; 
+    border: none;
+    padding: 10px; 
+    cursor: pointer; 
+    position: absolute;
+    margin-top: 50%; 
+    transform: translateY(-50%);
+}
+
 
 .titulo {
     margin: 6px 0px;
