--- a/albumes.css
+++ b/albumes.css
@@ -187,28 +187,12 @@ main{
 /**/
 
 /**/
-.descripcion{
-    width: 100%;
-    height: 20%;
-    display: inline-block;
-}
-
-.descripcion h2{
+#albumes h2{
     font-size: 18px;
     width: 60%;
     text-align: start;
     float: left;
     margin: 0px;
-}
-
-.descripcion h3{
-    font-size: 15px;
-    width: 35%;
-    padding-right: 10px;
-    text-align: end;
-    float: right;
-    margin: 0px;
-    color:rgb(168, 167, 167)
 }
 
 #albumes {
@@ -237,15 +221,8 @@ main{
     background-color: #5e5e5e;
     display: inline-block;
     width: 18%;
-    margin: 0px;
-    align-items: center;
-    min-width: 100%; 
-    box-sizing: border-box; 
-}
-
-.slides {
-    display: flex;
-    transition: transform 0.5s ease;
+    padding: 5px;
+    align-items: center ;
 }
 
 .contenedorAlbum img{
@@ -253,6 +230,7 @@ main{
     align-content: center;
     justify-content: center;
     margin: 5%;
+    margin-bottom: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -260,17 +238,26 @@ main{
     height: auto;
 }
 
-.prev, .next, .prevME, .prevMTSE, .nextME, .nextMTSE {
+button{
     background-color: rgba(0, 0, 0, 0.5); 
     color: white; 
     border: none;
     padding: 10px; 
     cursor: pointer; 
     position: absolute;
-    margin-top: 50%; 
     transform: translateY(-50%);
 }
 
+button:hover{
+    background-color: rgba(46, 46, 46, 0.5); 
+}
+
+.seccionBoton{
+    width: 5%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
 
 .titulo {
     margin: 6px 0px;
