--- a/playlists.css
+++ b/playlists.css
@@ -223,26 +223,30 @@ main{
 #favoritos, #creadasPorUser , #masEscuchados, #masTiempoSinEscuchar{
     margin: 15px;
 }
-.divPlaylists{
+
+.carousel{
     padding: 5px;
-    width:100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden; 
 }
 
-.contenedorPlaylists {
+.contenedorPlaylist{
     background-color: #5e5e5e;
     display: inline-block;
     width: 18%;
-    margin: 0px;
-    align-items: center;
-    border-radius: 5%;
-    text-align: center;
+    padding: 5px;
+    align-items: center ;
 }
 
-.contenedorPlaylists img{
+.contenedorPlaylist img{
     width: 150px;
     align-content: center;
     justify-content: center;
     margin: 5%;
+    margin-bottom: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -250,13 +254,37 @@ main{
     height: auto;
 }
 
-.Playlists {
-    margin: 8px 0px;
+button{
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white; 
+    border: none;
+    padding: 10px; 
+    cursor: pointer; 
+    position: absolute;
+    transform: translateY(-50%);
+}
+
+button:hover{
+    background-color: rgba(46, 46, 46, 0.5); 
+}
+
+.seccionBoton{
+    width: 5%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+.titulo {
+    margin: 6px 0px;
+    margin-bottom: 0px;
     text-align: center;
     justify-content: center;
     font-weight: bolder;
     color: black;
 }
+
+
 /**/
 /* ++++++++++++ MAIN (INICIO) +++++++++++ */
 
