--- a/infoArtista.css
+++ b/infoArtista.css
@@ -214,15 +214,55 @@ main{
 .nombre{
     font-size: 35px;
     font-weight: bold;
+    margin-top: 10px;
     margin-right: 55%;
+    margin-bottom: 5px;
 }
 
-.info h1{
-    font-size: 12px;
+.info p{
+    margin-top: 5px;
 }
-
 /**/
 
+/**/
+.canciones{
+    display:block;
+    width: 40%;
+    padding: 10px;
+}
+
+.canciones h1{
+    font-size: 23px;
+}
+
+.cancion{
+    width: 100%;
+    background-color: #0e0e0e;
+    display: inline-block;
+    margin: 5px;
+}
+
+.cancion img{
+    float: left; 
+    width: 80px;
+    height: 80px; 
+}
+
+.info-popular{
+    float: right;
+    margin: 0px;
+    margin-right: 25%;
+}
+
+.titulo{
+    font-size: 18px;
+    margin-bottom: 0px;
+}
+
+.duracion{
+    font-size: 15px;
+    margin: 0px;
+}
 /**/
 
 /* '''''''''''''' FOOTER (BARRA REP) '''''''''''''''*/
