--- a/playlists.css
+++ b/playlists.css
@@ -143,7 +143,7 @@ main{
     margin-top: 10px;
     margin-right: 10px;
     margin-left: 10px;
-    color: #8E1717;
+    COLOR:#8E1717;
 } 
 
 .nyl img{
@@ -218,30 +218,26 @@ main{
 #favoritos, #creadasPorUser , #masEscuchados, #masTiempoSinEscuchar{
     margin: 15px;
 }
-
-.carousel{
+.divPlaylists{
     padding: 5px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    position: relative;
-    overflow: hidden; 
+    width:100%;
 }
 
-.contenedorPlaylist{
+.contenedorPlaylists {
     background-color: #5e5e5e;
     display: inline-block;
     width: 18%;
-    padding: 5px;
-    align-items: center ;
+    margin: 0px;
+    align-items: center;
+    border-radius: 5%;
+    text-align: center;
 }
 
-.contenedorPlaylist img{
+.contenedorPlaylists img{
     width: 150px;
     align-content: center;
     justify-content: center;
     margin: 5%;
-    margin-bottom: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -249,37 +245,13 @@ main{
     height: auto;
 }
 
-button{
-    background-color: rgba(0, 0, 0, 0.5); 
-    color: white; 
-    border: none;
-    padding: 10px; 
-    cursor: pointer; 
-    position: absolute;
-    transform: translateY(-50%);
-}
-
-button:hover{
-    background-color: rgba(46, 46, 46, 0.5); 
-}
-
-.seccionBoton{
-    width: 5%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-}
-
-.titulo {
-    margin: 6px 0px;
-    margin-bottom: 0px;
+.Playlists {
+    margin: 8px 0px;
     text-align: center;
     justify-content: center;
     font-weight: bolder;
     color: black;
 }
-
-
 /**/
 /* ++++++++++++ MAIN (INICIO) +++++++++++ */
 
