--- a/canciones.css
+++ b/canciones.css
@@ -338,6 +338,10 @@ footer{
     margin-left: 20%;
 }
 
+#barraProgreso-responsive{
+    display:none;
+}
+
 #barraReproductora-iconos img{
     margin: 15px;
     width: 25px;
